# iptool-ffi

./: .gitattributes  .gitmodules  Cargo.toml  README.md  makefile
bindings/c/: iptool.c  iptool.h
bindings/c++/: iptool.cpp  iptool.h
bindings/go/: iptool.go  iptool.h
bindings/haskell/: Iptool.hs
bindings/java/src/iptool/: Iptool.java  RustLib.java
bindings/javascript/: iptool.js
bindings/julia/: Iptool.jl  iptool.jl
bindings/perl/: iptool.pm
bindings/python/: iptool.py
examples/: example.c  example.cpp  example.go  example.hs  example.java  example.jl  example.js  example.pl  example.py
lib/: iptool.js
src/: iptool.rs
