[package]
name = "iptool-ffi"
version = "0.1.0"
authors = ["timmonfette1 <monfette.timothy@gmail.com>"]
repository = "https://github.com/timmonfette1/iptool-ffi"
license = "MIT"
description = "IP Tool brought to other languages via an FFI "

[lib]
name = "iptool"
crate-type = ["cdylib"]

[dependencies]
libc = "0.2"
iptool-core = { path = "iptool-core" }

[workspace]
members = ["iptool-core"]
